Background Transitions & Product Circles
Signed-off-by: Nick Jonas <njonas45@gmail.com>

--- a/build2/sass/_variables.scss
+++ b/build2/sass/_variables.scss
@@ -29,6 +29,8 @@ $bp-medium-product-circles: 900px;
 $bp-small-product-circles: $bp-small-nav;
 $bp-ig-detail: 640px;
 
+$section-height:1280px;
+
 
 // font stacks
 $garamond: "garamond-premier-pro-display","adobe-garamond-pro", Garamond, ‘Hoefler Text’, ‘Times New Roman’, Times, serif;
