--- a/build2/sass/sections/_about-slit.scss
+++ b/build2/sass/sections/_about-slit.scss
@@ -16,12 +16,17 @@
 
 .sl-slide,
 .sl-slides-wrapper,
-.sl-slide-inner {
+.sl-slide-inner,
+.sl-slide-inner-2 {
     position: absolute;
     width: 100%;
     height: 100%;
     top: 0;
     left: 0;
+}
+
+.sl-slide-inner-2{
+    z-index:-1;
 }
 
 .sl-slide {
@@ -49,8 +54,8 @@
 
 .sl-slide-horizontal .sl-content-slice {
     width: 100%;
-    height: 50%%;
-    //height:100%;
+    //height: 50%%;
+    height:100%;
     left: -200px;
     -webkit-transform: translateY(0%) scale(1);
     -moz-transform: translateY(0%) scale(1);
@@ -62,36 +67,47 @@
 .sl-slide-horizontal .sl-content-slice:first-child {
     top: -200px;
     padding: 200px 200px 0px 200px;
+    .sl-slide-inner-2{
+        display:none;
+    }
+    .sl-slide-inner{
+        .slice-text, .pager, .about-nav-arrows{
+            opacity:0;
+        }
+    }
 }
 
 .sl-slide-horizontal .sl-content-slice:nth-child(2) {
-    top: 50%;
-    //top:0px;
+    //top: 50%;
+    top:0px;
     padding: 0px 200px 200px 200px;
+    .sl-slide-inner{
+        display:none;
+    }
 }
 
 /* Vertical slice */
 
-.sl-slide-vertical .sl-content-slice {
-    width: 50%;
-    height: 100%;
-    top: -200px;
-    -webkit-transform: translateX(0%) scale(1);
-    -moz-transform: translateX(0%) scale(1);
-    -o-transform: translateX(0%) scale(1);
-    -ms-transform: translateX(0%) scale(1);
-    transform: translateX(0%) scale(1);
-}
+// .sl-slide-vertical .sl-content-slice {
+//     width: 50%;
+//     height: 100%;
+//     top: -200px;
+//     -webkit-transform: translateX(0%) scale(1);
+//     -moz-transform: translateX(0%) scale(1);
+//     -o-transform: translateX(0%) scale(1);
+//     -ms-transform: translateX(0%) scale(1);
+//     transform: translateX(0%) scale(1);
+// }
 
-.sl-slide-vertical .sl-content-slice:first-child {
-    left: -200px;
-    padding: 200px 0px 200px 200px;
-}
+// .sl-slide-vertical .sl-content-slice:first-child {
+//     left: -200px;
+//     padding: 200px 0px 200px 200px;
+// }
 
-.sl-slide-vertical .sl-content-slice:nth-child(2) {
-    left: 50%;
-    padding: 200px 200px 200px 0px;
-}
+// .sl-slide-vertical .sl-content-slice:nth-child(2) {
+//     left: 50%;
+//     padding: 200px 200px 200px 0px;
+// }
 
 /* Content wrapper */
 /* Width and height is set dynamically */
@@ -108,16 +124,22 @@
 
 #about-slide{
     .sl-slide-inner{
-        background:url('../img/src/about/about_bottom.png'),
-                    url('../img/src/about/about_top.png');
+        background:url('../img/src/about/about_top.png');
+        @include background-size(cover);
+    }
+    .sl-slide-inner-2{
+        background:url('../img/src/about/about_bottom.png');
         @include background-size(cover);
     }
 }
 
 #kolohe-slide{
     .sl-slide-inner{
-        background:url('../img/src/about/kolohe_top.png'),
-            url('../img/src/about/kolohe_bottom.png');
+        background:url('../img/src/about/kolohe_top.png');
+        @include background-size(cover);
+    }
+    .sl-slide-inner-2{
+        background:url('../img/src/about/kolohe_bottom.png');
         @include background-size(cover);
     }
 }
