--- a/build2/sass/_variables.scss
+++ b/build2/sass/_variables.scss
@@ -25,6 +25,7 @@ $section-products-z:2;
 $section-about-z:2;
 $section-buy-z:2;
 $section-instagram-z:2;
+$page-down-z:9;
 
 // breakpoints
 $bp-medium-nav: 800px;
