--- a/build2/sass/main.scss
+++ b/build2/sass/main.scss
@@ -28,6 +28,7 @@
 
 @import "sections/lookbook.scss";
 @import "sections/products.scss";
+@import "sections/product-detail.scss";
 @import "sections/about.scss";
 @import "sections/about-slit.scss";
 @import "sections/buy.scss";
