--- a/build2/webapp/src/template/product-detail.html
+++ b/build2/webapp/src/template/product-detail.html
@@ -1,8 +1,8 @@
 <div class="product-detail {{product.class}}">
     <span class="left-half" style="background-color:{{product.productColor}};">
-        <span class="triangle" style="border-top-color:{{product.productColor}};"></span>
+        <!-- <span class="triangle" style="border-top-color:{{product.productColor}};"></span> -->
     </span>
-    <span class="right-half"><span class="triangle"></span></span>
+    <span class="right-half"><!-- <span class="triangle"></span> --></span>
     <div class="close-btn"></div>
     <div class="container">
         <div class="left-col">
