--- a/build2/sass/sections/_products.scss
+++ b/build2/sass/sections/_products.scss
@@ -45,6 +45,7 @@ $productPerRow: 3;
                 .product-name-container{
                     h1{
                         color:#000;
+                        width:242px;
                     }
                 }
                 .see-details{
@@ -140,7 +141,7 @@ $productPerRow: 3;
                     width:$circleDiameter;
                     h1{
                         margin:0 auto;
-                        padding:20px 0 0 0;
+                        padding:34px 0 0 0;
                         width:(0.6 * $circleDiameter);
                         #position: relative;
                         #top: -50%;
