--- a/build2/sass/sections/_product-detail.scss
+++ b/build2/sass/sections/_product-detail.scss
@@ -1,5 +1,5 @@
-$largeProductWidth:430px;
-$largeProductHeight:490px;
+$largeProductWidth:600px;
+$largeProductHeight:500px;
 $bgTriangleWidth: 150px;
 
 .product-detail{
@@ -70,7 +70,8 @@ $bgTriangleWidth: 150px;
 
         .left-col{
             position:absolute;
-            top:145px;
+            top:50%;
+            margin: 90px 0 0 0;
             left:45px;
             .product-title{
                 @include body-text(4em, #000000);
@@ -87,12 +88,13 @@ $bgTriangleWidth: 150px;
                 color:#000000;
                 width:340px;
                 text-align:center;
+                font-size:0.8em;
             }
             .buy-now{
                 position:relative;
                 float:left;
                 z-index:$product-detail-z + 2;
-                margin:30px 0 0 120px;
+                margin:60px 0 0 120px;
             }
         }
 
@@ -100,7 +102,7 @@ $bgTriangleWidth: 150px;
             width:$largeProductWidth;
             height:$largeProductHeight;
             position:absolute;
-            top:75px;
+            top:120px;
             left:400px;
             z-index:$product-detail-z + 2;
             .hide{
@@ -111,8 +113,8 @@ $bgTriangleWidth: 150px;
         .product-switcher{
             position:absolute;
             z-index:$product-detail-z + 3;
-            top: 530px;
-            left: 610px;
+            top: 586px;
+            left: 670px;
             .switch{
                 position:absolute;
                 cursor:pointer;
