--- a/build2/sass/sections/_buy.scss
+++ b/build2/sass/sections/_buy.scss
@@ -1,4 +1,4 @@
-.buy{
+section.buy{
     background: url('../img/src/buy/bg.jpg') 50% 0 repeat fixed;
     height:$section-height;
     padding:0px;
