--- a/build2/sass/sections/_lookbook.scss
+++ b/build2/sass/sections/_lookbook.scss
@@ -1,5 +1,5 @@
-.lookbook{
-    background: url('../img/src/lookbook/1.jpg') 50% 0 repeat fixed;
+section.lookbook{
+    // background: url('../img/src/lookbook/1.jpg') 50% 0 repeat fixed;
     height:$section-height;
     padding:0px;
     margin:0px;
