--- a/build2/sass/sections/_products.scss
+++ b/build2/sass/sections/_products.scss
@@ -47,6 +47,11 @@ $productPerRow: 3;
                         color:#000;
                         width:242px;
                     }
+                    -webkit-transform: scale(1);
+                    -moz-transform: scale(1);
+                    -o-transform: scale(1);
+                    -ms-transform: scale(1);
+                    transform: scale(1);
                 }
                 .see-details{
                     @include sprite(scroll-down);
@@ -55,33 +60,69 @@ $productPerRow: 3;
             }
         }
 
+        $circleInsetDiam: $circleDiameter / 2;
         #hotel-santorini{
+            $hotel-color: rgba(0,133,62,0.70);
             .product-name{
-                @include rgba-background(rgba(0,133,62,0.70));
+                //@include rgba-background(rgba(0,133,62,0.70));
+                box-shadow: inset 0 0 0 0 $hotel-color;
+            }
+            &:hover{
+                .product-name{
+                    box-shadow: inset 0 0 0 $circleInsetDiam $hotel-color;
+                }
             }
         }
 
         #pleasant-ville{
+            $pleasant-color: rgba(238,46,36,0.70);
             .product-name{
-                @include rgba-background(rgba(238,46,36,0.70));
+                //@include rgba-background($pleasant-color);
+                box-shadow: insert 0 0 0 0 $pleasant-color;
+            }
+            &:hover{
+                .product-name{
+                    box-shadow: inset 0 0 0 $circleInsetDiam $pleasant-color;
+                }
             }
         }
 
         #hello-heather{
+            $hello-color: rgba(224,50,123,0.70);
             .product-name{
-                @include rgba-background(rgba(224,50,123,0.70));
+                //@include rgba-background($hello-color);
+                box-shadow: insert 0 0 0 0 $hello-color;
+            }
+            &:hover{
+                .product-name{
+                    box-shadow:inset 0 0 0 $circleInsetDiam $hello-color;
+                }
             }
         }
 
         #iceberg-slim{
+            $iceberg-color: rgba(77,200,233,0.70);
             .product-name{
-                @include rgba-background(rgba(77,200,233,0.70));
+                //@include rgba-background($iceberg-color);
+                box-shadow: insert 0 0 0 0 $iceberg-color;
+            }
+            &:hover{
+                .product-name{
+                    box-shadow:inset 0 0 0 $circleInsetDiam $iceberg-color;
+                }
             }
         }
 
         #smile-after-dark{
+            $smile-color: rgba(255,242,0,0.70);
             .product-name{
-                @include rgba-background(rgba(255,242,0,0.70));
+                //@include rgba-background($smile-color);
+                box-shadow: insert 0 0 0 0 $smile-color;
+            }
+            &:hover{
+                .product-name{
+                    box-shadow:inset 0 0 0 $circleInsetDiam $smile-color;
+                }
             }
         }
 
@@ -92,7 +133,6 @@ $productPerRow: 3;
             height: $circleDiameter;
             position:absolute;
             cursor:pointer;
-            background:#FFFFFF;
             &.circle-0{
                 left: (0% * (100 / $productPerRow));
             }
@@ -111,6 +151,7 @@ $productPerRow: 3;
                 top:0px;
                 width:312px;
                 height:312px;
+                background:none;
             }
 
             .product-name{
@@ -120,7 +161,15 @@ $productPerRow: 3;
                 position:absolute;
                 z-index:100;
                 @include border-radius(50%);
-                @include rgba-background(rgba(0,133,62,0.70));
+
+                -webkit-transition: all 0.4s ease-in-out;
+                -moz-transition: all 0.4s ease-in-out;
+                -o-transition: all 0.4s ease-in-out;
+                -ms-transition: all 0.4s ease-in-out;
+                transition: all 0.4s ease-in-out;
+
+                -webkit-backface-visibility: hidden; /*for a smooth font */
+
                 .product-no{
                     color:#FFFFFF;
                     font-family:$futura;
@@ -133,6 +182,18 @@ $productPerRow: 3;
                     font-weight:300;
                 }
                 .product-name-container{
+                    -webkit-transition: all 0.4s ease-in-out;
+                    -moz-transition: all 0.4s ease-in-out;
+                    -o-transition: all 0.4s ease-in-out;
+                    -ms-transition: all 0.4s ease-in-out;
+                    transition: all 0.4s ease-in-out;
+
+                    -webkit-transform: scale(0.5);
+                    -moz-transform: scale(0.5);
+                    -o-transform: scale(0.5);
+                    -ms-transform: scale(0.5);
+                    transform: scale(0.5);
+
                     display: table-cell;
                     #position: absolute;
                     #top: 50%;
@@ -166,6 +227,13 @@ $productPerRow: 3;
                 opacity:1;
                 //@include single-transition(background, 0.3s ease-out);
                 display:block;
+                .product-name-container{
+                    -webkit-transform: scale(1);
+                    -moz-transform: scale(1);
+                    -o-transform: scale(1);
+                    -ms-transform: scale(1);
+                    transform: scale(1);
+                }
             }
         }
     }
