--- a/build2/webapp/src/template/instagram-detail.html
+++ b/build2/webapp/src/template/instagram-detail.html
@@ -1,4 +1,6 @@
+<div class="color-bg"></div>
 <div class="photo-detail-container">
+
     <div class="photo-detail-img">
         <img src="{{this.photo.images.standard_resolution.url}}"/>
     </div>
