--- a/build2/sass/sections/_about.scss
+++ b/build2/sass/sections/_about.scss
@@ -1,24 +1,26 @@
 @mixin story-headline(){
-    @include body-text(3.0em);
+    @include body-text(3.5em);
     font-weight:400;
     letter-spacing:2;
-
     //padding:120px 0 45px 0;
 }
 
 @mixin story-body(){
 
-    width:40%;
+    margin-top:300px;
+    width:50%;
     font-family:$futura;
-    display: table-cell;
-    vertical-align: middle;
     text-align:center;
-    padding:0 25% 0 25%;
     line-height:1.5;
+    font-size:0.85em;
+    display: block;
+    margin:0 auto;
+
 }
 
-.about{
-    background: url('../img/src/about/storybackground.jpg') 50% 0 repeat fixed;
+section.about{
+    //background: url('../img/src/about/storybackground.jpg') 50% 0 repeat fixed;
+    background:$forest-green;
     height:1000px;//$section-height;
     padding:0px;
     margin:0px;
@@ -29,7 +31,7 @@
 
 
     .about-nav-arrows{
-        z-index: 1;
+        z-index: 15;
         position: absolute;
         top: 50%;
         left: 0px;
@@ -56,49 +58,13 @@
 
         display:table;
 
-        // top:50%;
-        // margin-top:-180px;
-        p{
-            @include story-body();
-             @media screen and (max-width: 980px) {
-                padding:0 10% 0 10%;
-            }
-            .title{
-                @include story-headline();
-            }
-        }
-    }
-
-    .kolohe-text{
-        z-index:1;
-        p, p .title{
-            color:white;
-        }
-        p{
-            font-weight:400;
-        }
     }
 
     .pager{
-        position:absolute;
-        bottom:50%;
-        left:50%;
-        margin:0 0 -300px 0;
-        @media screen and (max-width: 650px) {
-            bottom:100px;
-            margin:0px;
-        }
-
-         @media screen and (max-width: 385px) {
-            display:none;
-        }
-    }
-
-    .page-down{
-        position:absolute;
-        bottom:50px;
-        left:20px;
-        z-index:5;
+        position: relative;
+        margin: 60px auto;
+        display: block;
+        width: 15px;
     }
 
 }
