--- a/build2/sass/_variables.scss
+++ b/build2/sass/_variables.scss
@@ -34,8 +34,8 @@ $page-down-z:9;
 // breakpoints
 $bp-medium-nav: 840px;
 $bp-small-nav: 460px;
-$bp-medium-product-circles: 900px;
-$bp-small-product-circles: $bp-small-nav;
+$bp-product-circles: 1000px;
+$bp-product-detail: 825px;
 $bp-ig-detail: 990px;
 
 $section-height:1280px;
