--- a/build2/sass/sections/_products.scss
+++ b/build2/sass/sections/_products.scss
@@ -137,7 +137,7 @@ $productPerRow: 3;
                 left: (0% * (100 / $productPerRow));
             }
             &.circle-1{
-                left: 1% * (100 / $productPerRow);
+                left: 32%;//1% * (100 / $productPerRow);
             }
             &.circle-2{
                 left: 2% * (100 / $productPerRow);
@@ -248,6 +248,43 @@ $productPerRow: 3;
         position:absolute;
         bottom: 80px;
         right:100px;
+    }
+
+    @media screen and (max-width: $bp-product-circles){
+
+        &.start-left{
+            .product-circle{
+                left: 50% !important;
+                margin-left: -156px !important;
+                &.circle-0{
+                    margin-top:-200px;
+                }
+                &.circle-1{
+                    margin-top:-25px;
+                }
+                &.circle-2{
+                    margin-top:200px;
+                }
+            }
+
+        }
+
+        &.start-right{
+            .product-circle{
+                left: 50% !important;
+                margin-left: -156px !important;
+                &.circle-2{
+                    margin-top:-200px;
+                }
+                &.circle-1{
+                    margin-top:-25px;
+                }
+                &.circle-0{
+                    margin-top:200px;
+                }
+            }
+        }
+
     }
 
 }
